objects/cc_oo_Freight_Rate__c.object
<CustomObject>
    <fields>
        <fullName>CC_OO_Customer_Freight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC OO Customer Freight</label>
        <referenceTo>CC_OO_Customer_Freight__c</referenceTo>
        <relationshipLabel>CC OO Freight Rates</relationshipLabel>
        <relationshipName>CC_OO_Freight_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desciription__c</fullName>
        <label>Desciription</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Rate_ID__c</fullName>
        <description>Internal  Unique ID</description>
        <label>Freight Rate ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Freight_Rate__c</fullName>
        <label>Freight Rate</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <label>Program ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_Day__c</fullName>
        <label>Time of Day</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Weight__c</fullName>
        <label>Unit Weight</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Amount__c</fullName>
        <label>User Reserved Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Code__c</fullName>
        <label>User Reserved Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Date__c</fullName>
        <label>User Reserved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Number__c</fullName>
        <label>User Reserved Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Reserved_Reference__c</fullName>
        <label>User Reserved Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Station_ID__c</fullName>
        <label>Work Station ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CC OO Freight Rate</label>
    <nameField>
        <label>CC OO Freight Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC OO Freight Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>